--- a/index.html
+++ b/index.html
@@ -3,49 +3,67 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>instakimkc — Enter ID</title>
+  <title>instakimkc — Combinator</title>
   <style>
     :root{--bg:#0f172a;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass: rgba(255,255,255,0.03)}
     *{box-sizing:border-box}
     body{margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial;background:linear-gradient(180deg,#071026 0%, #071a2a 100%);color:#e6eef6;min-height:100vh;display:grid;place-items:center;padding:24px}
-    .card{width:100%;max-width:720px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:28px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
+    .card{width:100%;max-width:880px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:28px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
     h1{margin:0 0 8px;font-size:28px;letter-spacing:0.6px}
     p.lead{margin:0 0 18px;color:var(--muted)}
     .row{display:flex;gap:12px}
-    input[type="text"]{flex:1;padding:12px 14px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:var(--glass);color:inherit;font-size:15px}
+    input[type="text"], input[type="number"], select{flex:1;padding:12px 14px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:var(--glass);color:inherit;font-size:15px}
     button{padding:11px 14px;border-radius:10px;border:0;background:linear-gradient(90deg,var(--accent),#7dd3fc);color:#022;cursor:pointer;font-weight:600}
     .output{margin-top:18px;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02);display:flex;gap:10px;align-items:center}
-    .pw{font-family:monospace;padding:8px 12px;border-radius:8px;background:rgba(0,0,0,0.25);}
+    .pw{font-family:monospace;padding:8px 12px;border-radius:8px;background:rgba(0,0,0,0.25);font-size:18px}
     .meta{color:var(--muted);font-size:13px}
     .timer{margin-top:18px}
     .bar{width:100%;height:18px;background:rgba(255,255,255,0.06);border-radius:999px;overflow:hidden}
-    .bar > i{display:block;height:100%;width:100%;background:linear-gradient(90deg,var(--accent),#7dd3fc);transform-origin:left;transition:width 0.3s linear}
+    .bar > i{display:block;height:100%;width:100%;background:linear-gradient(90deg,var(--accent),#7dd3fc);transform-origin:left;transition:width 0.2s linear}
     .small{font-size:13px;color:var(--muted)}
     .controls{display:flex;gap:8px;margin-top:12px}
     .ghost{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted);padding:8px 10px;border-radius:8px;cursor:pointer}
     .muted-note{margin-top:12px;color:var(--muted);font-size:13px}
-    @media (max-width:520px){.row{flex-direction:column}button{width:100%}}
+    .settings{display:flex;gap:12px;align-items:center;margin-top:12px}
+    .label{font-size:13px;color:var(--muted)}
+    @media (max-width:720px){.row{flex-direction:column}button{width:100%}}
   </style>
 </head>
 <body>
   <main class="card" role="main">
     <h1>instakimkc</h1>
-    <p class="lead">Enter an ID to generate a password and start an 8-hour timer that shows time left.</p>
+    <p class="lead">Enter an ID to start the 8‑hour timer. While the timer runs the password area will cycle through numeric combinations (1 digit → 15 digits) one by one. Use the speed control to change how many combinations are advanced per second.</p>
 
     <div class="row" role="form" aria-label="Enter ID form">
       <input id="idInput" type="text" inputmode="text" placeholder="Enter ID (anything)" aria-label="ID input" />
       <button id="enterBtn">Enter</button>
     </div>
 
-    <div id="output" class="output" style="display:none">
+    <div class="settings">
+      <div style="display:flex;align-items:center;gap:8px">
+        <div class="label">Speed</div>
+        <input id="speed" type="number" min="1" max="10000" value="1" style="width:110px" title="Combinations per second" />
+        <div class="label">comb/sec (1–10000)</div>
+      </div>
+
+      <div style="margin-left:auto;display:flex;gap:8px;align-items:center">
+        <div class="label">Current length</div>
+        <div id="curLen" class="pw">1</div>
+        <div class="label">Counter</div>
+        <div id="curCount" class="pw">0</div>
+      </div>
+    </div>
+
+    <div id="output" class="output" style="display:none;justify-content:space-between;align-items:center">
       <div>
-        <div class="meta">Password</div>
+        <div class="meta">Password (combinations will replace this)</div>
         <div style="display:flex;align-items:center;gap:8px">
           <div id="password" class="pw">—</div>
           <button id="copyBtn" class="ghost">Copy</button>
         </div>
       </div>
-      <div style="margin-left:auto;text-align:right">
+
+      <div style="text-align:right">
         <div class="meta">Timer</div>
         <div id="timeText" class="pw">08:00:00</div>
       </div>
@@ -60,37 +78,12 @@
         <button id="pauseBtn" class="ghost">Pause</button>
         <button id="resetBtn" class="ghost">Reset</button>
       </div>
-      <div class="muted-note">Timer is 8 hours (28800 seconds). When it expires the password will be hidden.</div>
+      <div class="muted-note">Note: generating every possible numeric combination up to 15 digits (10^15 items) would take far longer than any browser session — this page advances combinations sequentially (you can speed it up). When the 8‑hour timer expires the display will stop and show expired.</div>
     </div>
   </main>
 
   <script>
-    // Utility: hex from ArrayBuffer
-    function toHex(buffer){
-      const bytes = new Uint8Array(buffer);
-      return Array.from(bytes).map(b=>b.toString(16).padStart(2,'0')).join('');
-    }
-
-    // Deterministic password: SHA-256 of the given id, then take base64/url-friendly and slice.
-    async function makePassword(id){
-      const enc = new TextEncoder();
-      const data = enc.encode(id);
-      const hashBuffer = await crypto.subtle.digest('SHA-256', data);
-      // convert to base64 url-friendly
-      const hex = toHex(hashBuffer);
-      // map hex to a compact alphanumeric password of length 12
-      // take pairs of hex -> number -> base36 to get variety
-      let pw = '';
-      for(let i=0;i<12;i++){
-        const pair = hex.substr((i*2) % hex.length, 2);
-        const num = parseInt(pair,16);
-        pw += (num % 36).toString(36);
-      }
-      // mix case: alternate
-      pw = pw.split('').map((c,i)=> i%3===0? c.toUpperCase(): c).join('');
-      return pw;
-    }
-
+    // UI elements
     const enterBtn = document.getElementById('enterBtn');
     const idInput = document.getElementById('idInput');
     const output = document.getElementById('output');
@@ -100,11 +93,21 @@
     const timeText = document.getElementById('timeText');
     const pauseBtn = document.getElementById('pauseBtn');
     const resetBtn = document.getElementById('resetBtn');
+    const speedInput = document.getElementById('speed');
+    const curLen = document.getElementById('curLen');
+    const curCount = document.getElementById('curCount');
 
+    // Timer constants
     const TOTAL = 8 * 60 * 60; // 28800 seconds
     let remaining = TOTAL;
     let timerId = null;
     let running = false;
+
+    // Combination generator state
+    let L = 1;               // current digit length (1..15)
+    let c = 0;               // current numeric value shown
+    let playing = false;     // whether combos are advancing
+    let comboIntervalId = null;
 
     function formatTime(sec){
       if(sec<0) sec=0;
@@ -118,9 +121,13 @@
       const pct = Math.max(0, Math.min(1, remaining / TOTAL));
       progress.style.width = (pct*100) + '%';
       timeText.textContent = formatTime(remaining);
+      curLen.textContent = L;
+      curCount.textContent = String(c);
       if(remaining<=0){
         running = false;
+        playing = false;
         clearInterval(timerId);
+        stopCombos();
         passwordEl.textContent = '— (expired)';
         output.style.opacity = '0.6';
         pauseBtn.textContent = 'Pause';
@@ -144,20 +151,78 @@
       pauseBtn.textContent = 'Resume';
     }
 
-    enterBtn.addEventListener('click', async ()=>{
-      const id = idInput.value.trim();
-      if(!id){
-        idInput.focus();
-        return;
+    // Combo generator helpers
+    function startCombos(){
+      if(comboIntervalId) clearInterval(comboIntervalId);
+      let cps = parseInt(speedInput.value,10) || 1;
+      if(cps < 1) cps = 1;
+      // limit to reasonable max to avoid locking the browser
+      cps = Math.min(cps, 10000);
+      const msPerStep = 1000 / cps; // may be fractional
+
+      playing = true;
+      comboIntervalId = setInterval(()=>{
+        advanceCombo();
+      }, Math.max(1, Math.round(msPerStep)));
+    }
+
+    function stopCombos(){
+      if(comboIntervalId){
+        clearInterval(comboIntervalId);
+        comboIntervalId = null;
       }
-      const pw = await makePassword(id);
-      passwordEl.textContent = pw;
+      playing = false;
+    }
+
+    function resetCombos(){
+      L = 1;
+      c = 0;
+      updatePasswordDisplay();
+    }
+
+    function advanceCombo(){
+      // increment c within the current length range
+      const minForL = (L === 1) ? 0 : Math.pow(10, L-1);
+      const maxForL = Math.pow(10, L); // exclusive
+
+      if(c < minForL) c = minForL; // ensure starting point
+      c++;
+      if(c >= maxForL){
+        // finished this length; move to next
+        if(L < 15){
+          L++;
+          c = (L === 1) ? 0 : Math.pow(10, L-1);
+        } else {
+          // reached length 15's max, wrap back to length 1
+          L = 1;
+          c = 0;
+        }
+      }
+      updatePasswordDisplay();
+    }
+
+    function updatePasswordDisplay(){
+      // Show the combination as-is (no forced leading zeros) — each new value replaces the previous
+      // If you prefer padded values (to show exact digit-length), change below to padStart(L,'0')
+      passwordEl.textContent = String(c);
+      curLen.textContent = L;
+      curCount.textContent = String(c);
+    }
+
+    // UI event wiring
+    enterBtn.addEventListener('click', ()=>{
+      const id = idInput.value.trim();
+      if(!id){ idInput.focus(); return; }
+      // reveal output
       output.style.display = 'flex';
       output.style.opacity = '1';
-      // reset timer
+
+      // reset timer & combos
       remaining = TOTAL;
       updateUI();
+      resetCombos();
       startTimer();
+      startCombos();
     });
 
     copyBtn.addEventListener('click', ()=>{
@@ -174,25 +239,32 @@
 
     pauseBtn.addEventListener('click', ()=>{
       if(!timerId) return;
-      if(running) pauseTimer(); else { running=true; pauseBtn.textContent='Pause'; }
+      if(running){ pauseTimer(); stopCombos(); }
+      else { running = true; pauseBtn.textContent='Pause'; startCombos(); startTimer(); }
     });
 
     resetBtn.addEventListener('click', ()=>{
       remaining = TOTAL;
       updateUI();
-      running = false;
+      resetCombos();
+      stopCombos();
       clearInterval(timerId);
+      timerId = null;
+      running = false;
       pauseBtn.textContent = 'Pause';
     });
 
-    // allow Enter key in input
-    idInput.addEventListener('keydown', (e)=>{
-      if(e.key === 'Enter') enterBtn.click();
+    // change speed on the fly
+    speedInput.addEventListener('change', ()=>{
+      if(playing){ startCombos(); }
     });
 
-    // initialize UI
+    idInput.addEventListener('keydown', (e)=>{ if(e.key === 'Enter') enterBtn.click(); });
+
+    // initialize
     timeText.textContent = formatTime(TOTAL);
     updateUI();
+    updatePasswordDisplay();
   </script>
 </body>
 </html>
